# my-assistant-sophia

./: .gitignore  AGENTS.md  LICENSE  README.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.2.0.md  index.html  package-lock.json  package.json
docs/Deep_Operational_Assistant_Vision_FINAL/: 01_Vision.md  02_Product_Principles.md  03_Assistant_Modes.md  04_Understanding_Snapshot.md  06_Assistant_Contract.md  08_Run_Modes.md  09_UI_Vision.md  10_Requirements_v1.md
docs/Desktop_App_Release_Readiness_Package/: 02_Desktop_App_Architecture.md  06_Model_Routing_Spec.md  07_Data_and_Memory_Model.md  12_Post_Release_Guardrails.md
docs/Internal_Commitments_and_Operating_Contracts/: 00_README.md  07_Change_Management_and_Governance.md  08_Org_and_Ownership_Responsibilities.md  09_Cloud_Readiness_Criteria.md
planning/: ARTIFACTS_REGISTRY.md  CHANGELOG.md  DECISIONS.md  GATES.md  RELEASE_CHECKLIST.md  SPRINT_ACCEPTANCE_CHECKLIST.md  TEST_EVIDENCE_INDEX.md  TEST_PLAN_MATRIX.md
planning/architecture/: SPRINT_2_DATA_DESIGN.md  SPRINT_3_ONBOARDING_DESIGN.md  SPRINT_5_UI_DESIGN.md
scripts/: hash_test_results.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/onboarding/: manager.rs
src-tauri/src/providers/: mod.rs  registry.rs  types.rs
src-tauri/src/router/: client.rs  core.rs
src-tauri/src/secret_store/: crypto.rs  file_backend.rs  mod.rs  store.rs
src-tauri/src/storage/: manager.rs  mod.rs  pricing.rs  usage.rs
src-tauri/tests/: provider_integration_tests.rs
templates/: TEST_RUN_TEMPLATE.md
(+56 files in other folders)
