[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5" }
tauri-plugin-log = "2"
chrono = { version = "0.4.43", features = ["serde"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.24.0"
